fixing whitespace

--- a/homepage.css
+++ b/homepage.css
@@ -1,13 +1,9 @@
 
-
-body{
-border: 1px solid red;
-}
-
 body{
 padding: 0;
 margin: 0;
 bottom: 0px;
+border: 1px solid red;
 }
 
 h1 {
